--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^5.3.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.4.1",
     "helmet": "^4.6.0",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "slugify": "^1.6.5",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
