--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5",
+    "stripe": "^10.8.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
